clusters/home/apps/personal-finance/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: personal-finance
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
